# wiki-source

./: .gitignore  MobilePlatformSupport-new  MobileWheelsDatabase_new  build.sh  db_build.sh  db_build_run.sh  hello-world  mkdocs.yml  pyproject.toml
.github/: .copilot-instructions.md
.github/workflows/: main.yml
MobileWheelsDatabase/: .gitignore  ENUM_MAPPING.md  Package.swift  README.md  STATUS.md  build.sh
MobileWheelsDatabase/Sources/MobileWheelsDatabase/: DatabaseBridge.swift  Enums.swift  (+2 more)
docs/: PySwift_Types.csv  index.md  mobile-wheels-results.md  setup.md
docs/mobile-wheels-support/: binary-without-mobile.md  excluded-packages.md  kivy-ios-vs-pep730.md  kivy-ios-vs-pyswift.md  mobile-wheels-results.md  package-search-old.md  package-search.md  pure-python-packages.md
docs/mobilewheels_assets/: data-1.sqlite  data-10.sqlite  data-11.sqlite  data-12.sqlite  data-13.sqlite  data-14.sqlite  data-15.sqlite  data-16.sqlite  data-17.sqlite  data-18.sqlite  data-19.sqlite  data-2.sqlite  data-20.sqlite  data-21.sqlite  data-22.sqlite  data-23.sqlite  data-24.sqlite  data-25.sqlite  data-26.sqlite  data-27.sqlite  data-28.sqlite  data-29.sqlite  data-3.sqlite  data-4.sqlite  data-5.sqlite  data-6.sqlite  data-7.sqlite  data-8.sqlite  data-9.sqlite  package-search.js
docs/project/: install_psproject.md
docs/stylesheets/: extra.css
docs/wrapper_docs/: expanded_types.md  install_swiftonize.md  other_types.md  standard_types.md  types.md
docs/wrapper_examples/: audio_arpeggiator.md  battery_level.md  device_info.md  firebase_auth.md  hello_world.md  open_url_classes.md  open_url_functions.md  uikit_viewcontroller.md
generator/source/: index.rst  write_wrapper.rst
python_modules/: audio_player_example.py  swift_types.py
(+1019 files in other folders)
