[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PythonSwiftLink", email = "pythonswiftlink@gmail.com" }
]
requires-python = ">=3.11.6"
dependencies = [
    "installer>=0.7.0",
    "mkdocs-material>=9.5.50",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mkdocstrings-python>=1.13.0",
    "pymdown-snippets",
]

[project.scripts]
docs = "docs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
