[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PythonSwiftLink", email = "pythonswiftlink@gmail.com" }
]
requires-python = ">=3.13.0"
dependencies = [
    "installer>=0.7.0",
    "mkdocs-material>=9.5.50",
    "mkdocs-mobilewheelsdb-plugin",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mkdocstrings-python>=1.13.0",
    "pymdown-extensions>=10.3",
]

[project.scripts]
docs = "docs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mkdocs-mobilewheelsdb-plugin = { git = "https://github.com/Py-Swift/MobileWheelsDatabase.git", tag = "v0.1.2" }
